# confluence-cli

./: .adr-dir  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/agents/: confluence-api-rust-developer.md  confluence-auth-rust-developer.md  rust-developer.md
.github/workflows/: ci.yml  docs.yml
Docs/: book.toml
Docs/adr-fragments/: _intro.md  _outro.md
Docs/src/: SUMMARY.md  auth.md  installation.md  intro.md
Docs/src/adr/: 0001-record-architecture-decisions.md  0002-cloud-only-for-v0-1.md  0003-api-token-only-authentication-for-v0-1.md  0004-three-crate-workspace-layout.md  0005-storage-format-only-for-v0-1.md  0006-clippy-pedantic-with-documented-carve-outs.md  0007-secrets-wrapped-in-a-zeroizing-newtype.md  0008-non-exhaustive-on-public-enums-for-forward-compat.md  0009-hosts-toml-locked-atomic-ordered-writes.md  0010-authstore-trait-object-with-send-and-sync.md  README.md
Docs/src/commands/: README.md
crates/confluence-api/: Cargo.toml
crates/confluence-api/src/: lib.rs
crates/confluence-auth/: Cargo.toml
crates/confluence-auth/src/: auth.rs  credential.rs  error.rs  hosts.rs  lib.rs  paths.rs  secret.rs
crates/confluence-auth/src/store/: encrypted_file.rs  keyring.rs  memory.rs  mod.rs
crates/confluence-auth/tests/: hosts_proptest.rs
crates/confluence-cli/: Cargo.toml
crates/confluence-cli/src/: context.rs  main.rs  output.rs
crates/confluence-cli/src/commands/: api.rs  attachment.rs  auth.rs  comment.rs  mod.rs  page.rs  search.rs  space.rs
