[workspace]
resolver = "2"
members = [
    "crates/confluence-api",
    "crates/confluence-auth",
    "crates/confluence-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/duki994/confluence-cli"
authors = ["confluence-cli contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
# Every command handler is `pub async fn run(...)` by design — they will all
# `.await` HTTP calls once the typed client lands. Skeleton stubs that don't
# yet await anything would otherwise trip pedantic.
unused_async = "allow"

[workspace.dependencies]
# Internal crates
confluence-api = { path = "crates/confluence-api", version = "0.1.0" }
confluence-auth = { path = "crates/confluence-auth", version = "0.1.0" }

# Shared third-party crates
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
