[package]
name = "confluence-auth"
description = "Credential storage and host registry for the confluence CLI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
